--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500&family=Roboto+Slab:wght@100;500&display=swap");
+header {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: cadetblue;
+  border: 2px solid cadetblue;
+  font-weight: 500;
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Noto Serif KR", serif;
+}
+main {
+  display: flex;
+  font-family: "Noto Serif KR", serif;
+  height: 90vh;
+  margin-top: 10px;
+}
+.flex__sidebar {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  padding: 10px;
+  border: 3px solid orange;
+}
+.button__add {
+  padding: 5px 10px;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  background-color: tomato;
+  font-weight: bold;
+  color: white;
+}
+.button__add:hover {
+  background-color: teal;
+  color: white;
+}
+.flex__contianer {
+  display: flex;
+  flex: 1;
+  flex-grow: row wrap;
+  align-content: flex-start;
+  overflow-y: scroll;
+  border: 3px solid olive;
+  margin-left: 10px;
+  flex-wrap: wrap;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 200px;
+  height: 250px;
+  border-radius: 5px;
+  background-color: antiquewhite;
+  margin: 10px;
+  align-items: center;
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.04);
+}
+.card > span {
+  padding-top: 20px;
+}
+.card > img {
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.modal__container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  position: relative;
+}
+.modal__overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.modal__form {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+.modal {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+}
+.modal__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 16px;
+}
+.modal__close:hover {
+  background-color: bisque;
+}
+.modal > input {
+  font-size: 18px;
+  border: 1px solid chocolate;
+  border-radius: 5px;
+  height: 30px;
+  margin: 10px;
+  padding-left: 5px;
+}
+.modal > input:focus {
+  border-color: cadetblue;
+}
+.modal > label {
+  font-weight: bold;
+}
+.button__submit {
+  background-color: tan;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
+  height: 40px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.hidden {
+  display: none;
+}
+
+/* 반응형? */
+
+@media (max-width: 950px) {
+  .card {
+    background: tan;
+  }
+}
+
+@media (max-width: 650px) {
+  .card {
+    background: orange;
+  }
 }
